Improve UI and user experience: 1. Use flex layout to always put footer on bottom 2. Add prompt when the grade book is empty 3. Force font size within <input> to be 16px on phones, avoiding zooming effect when trying to input (tested on iOS Safari)

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,8 +1,6 @@
 :root {
     --max-width: 750px;
-    --grade-book-max-width: 850px;
     --modal-width: 450px;
-    --modal-width-phone: 200px;
 }
 
 button {
@@ -37,10 +35,10 @@ button {
     align-items: center;
     justify-content: space-around;
     flex-direction: column;
+    padding: 0.3rem;
 
     font-size: 0.8rem;
-    height: 5.5rem;
-    white-space: nowrap;
+    height: 6rem;
 
     color: #eee;
     background-color: #333;
@@ -76,8 +74,8 @@ button {
 /* ------------------------------ 导入器 ------------------------------ */
 .import-prompt {
     background-color: #ccc;
-    padding: 0.5rem 1.0rem;
-    padding-bottom: 1rem;
+    padding: 0.3rem 1.0rem;
+    padding-bottom: 0.5rem;
     width: 90%;
     max-width: var(--max-width);
     margin: 1.5rem auto;    /* margin: auto 实现居中 */
@@ -85,6 +83,14 @@ button {
     box-sizing: border-box;
     box-shadow: 0 0 0.25rem white;
     line-height: 1.5rem;
+}
+.import-prompt div {
+    margin-bottom: 0.2rem;
+}
+.import-prompt button {
+    padding: 0.1rem 0.4rem;
+    border-radius: 0.5rem;
+    border: 1px solid #aaa;
 }
 #paste-here {
     background-color: #eee;
@@ -115,12 +121,9 @@ button {
 
 /* ------------------------------ 成绩单 ------------------------------ */
 #grade-book {
-    margin: auto;
     padding-top: 1.3rem;
-    padding-bottom: 1rem;
     border-radius: 5px;
     box-sizing: border-box;
-    max-width: var(--grade-book-max-width);
     text-shadow: 0 0 3px white;
 }
 .course-row,
@@ -134,6 +137,18 @@ button {
     box-shadow: 0 0 0.5rem #aaf;
     width: 90%;
     margin: auto;
+}
+#empty-grade-book {
+    text-shadow: none !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 6rem;
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: #ccc;
+    margin-bottom: 2rem;
 }
 /* -------------- 左部 -------------- */
 .course-row .left,
@@ -217,20 +232,23 @@ button {
 
 /* ------------------------------ 总结 ------------------------------ */
 #summary {
-    margin: 1rem auto auto;
-    padding-top: 1rem;
     padding-bottom: 1rem;
     box-shadow: 0 0 10px #3333;
     box-sizing: border-box;
-    max-width: var(--grade-book-max-width);
+}
+
+#summary > .semester-row {
+    max-width: var(--max-width);
+    margin: auto;
 }
 
 #summary-table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 80%;
-    margin: 0.5rem auto auto;
+    margin: 0rem auto auto;
     text-align: center;
+    max-width: calc(var(--max-width) * 0.9);
 }
 #summary-table td,
 #summary-table th {
@@ -286,25 +304,24 @@ button {
 }
 @media (max-width: 500px) {
     #add-course {
-        width: 300px;
+        width: 340px;
         background-color: rgba(0, 0, 0, 0.9);
     }
     #add-course .hint {
-        font-size: 0.5rem;
+        font-size: 0.7rem;
     }
     #add-course-inputs input {
-        width: 5rem;
+        width: 8rem;
     }
     #add-course-inputs {
         display: grid;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr 0.5fr;
-        grid-template-columns: 0.3fr 0fr 1fr 0fr;
+        grid-template-columns: 0.5fr 2fr 1.3fr 0fr;
         align-items: center;
     }
+    #add-course-inputs input {
+        width: 10rem;
+        height: 1.5rem;
+        font-size: 16px;
+    }
 }
-
-
-
-
-
-
